[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
async-trait = "0.1.75"
json = "0.12.4"
serde = "1.0.193"
surrealdb = "1.0.2"
uuid = "1.6.1"
validator = "0.16.1"
tera = "1.0"
